# Wikigame

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  app.js  package.json  server.js
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/handlers/: mod.rs  multiplayer.rs  wiki.rs
backend/src/models/: mod.rs  responses.rs  wikipedia_api.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs  wikipedia.rs
databases/: Dockerfile  init.sql
frontend/: Dockerfile  DockerfileDev  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js  App.jsx  functions.js  functions.mjs  index.js
frontend/src/components/: index.js
frontend/src/components/ErrorMessage/: ErrorMessage.jsx
frontend/src/components/LoadWikipediaPage/: LoadWikipediaPage.jsx  index.js
frontend/src/components/Spinner/: Spinner.jsx
frontend/src/components/WikiHeader/: WikiHeader.css  WikiHeader.jsx  index.js
frontend/src/components/WikiLink/: WikiLink.jsx  index.js
frontend/src/components/WikiName/: WikiName.jsx  index.js
frontend/src/config/: api.js
frontend/src/hooks/: index.js  useWikipedia.js
frontend/src/pages/: index.js
frontend/src/pages/BuildingPage/: BuildingPage.css  BuildingPage.jsx  index.js
frontend/src/pages/Home/: Home.css  Home.jsx
frontend/src/pages/WikiPages/: WikiPages.jsx  index.js
frontend/src/services/: index.js  wikipedia.js
