[package]
name = "my_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version= "0.12.24", features = ["json"]}
urlencoding = "2"
anyhow = "1.0.100"